--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   flutter_sound: ^9.19.1
   path_provider: ^2.1.5
   audioplayers: ^6.1.1
+  get: ^4.6.5
+  get_storage: ^2.0.3
+  cached_network_image: ^3.2.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
